# strukern

./: .gitignore  .gitmodules  README.md  tests.py
data/catalysts/gxl/: ee.json
src/: .clang-format  CMakeLists.txt  compile_commands.json  convert_mnist_image.py  main.cpp  setup.py
src/.clangd/index/: basekernel.h.2A0D275D14F303EF.idx  common.h.602AA46750D27B65.idx  gedkernel.h.A497811CEC2BBA9B.idx  gedlib_test.h.386C3D25E3CEAA6E.idx  graph.cpp.5F2069A2D483C8B5.idx  graph.h.A5052F101725763A.idx  graphbinding.h.1EC94327ACD6D9E1.idx  graphkernelbinding.h.2F9305200FE28106.idx  imagekernelbinding.h.DF47B304F2F053A5.idx  imagekernels.cpp.349A7F1C8C03C058.idx  imagekernels.h.3F4F7146EE367F1F.idx  main.cpp.8F7172CE0E1A49DD.idx  my_edit_costs.h.E2761E1941DE6475.idx  stringkernelbinding.h.22E5AC3CCBB40A65.idx  stringkernels.cpp.527B8D2BF7D64CED.idx  stringkernels.h.F54D302D064BAA9E.idx  strukern.cpp.198CC660D7B00F28.idx
src/IO/: dataset.h  gxl.h
src/binding/: graphbinding.h  graphkernelbinding.h  imagekernelbinding.h  stringkernelbinding.h  struker.cpp  strukern.cpp  tensorkernelbinding.h  vectorkernelbinding.h
src/domain/: 1a.gxl  CMakeLists.txt  common.h  edit_costs.hpp  eu_dist.cpp  gauss_dist.cpp  graph.h  mol_atombondtype.cpp  my_edit_costs.h  ppm_models.h  utils.hpp  utils.py
src/ged_edit_costs/: ahneman.h  molecule.h  my_edit_costs.h
src/kernels/: CMakeLists.txt  basekernel.h  gedkernel.cpp  gedkernel.h  gedlib_test.h  graphkernels.cpp  graphkernels.h  imagekernels.cpp  imagekernels.h  jpeg_test.h  kernelmat.cpp  stringkernels.cpp  stringkernels.h  tensorkernel.cpp  tensorkernel.h  vectorkernels.cpp  vectorkernels.h
src/lib/tthresh/: io.hpp
src/python_stuff/: kernel_functions.py
src/strukern.egg-info/: top_level.txt
src/tthresh/: compress.hpp  my_compress.hpp
src/tthresh_usage/: my_compress.hpp
strukern.egg-info/: PKG-INFO  SOURCES.txt
